# clap-wrapper-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: validate.yml
bundler/src/: bundle.rs
clap-wrapper-auv2/: Cargo.toml  build.rs
clap-wrapper-auv2/src/: lib.rs
clap-wrapper-auv2/src/cpp/: generated_cocoaclasses.hxx
clap-wrapper-vst3/: Cargo.toml  build.rs
clap-wrapper-vst3/src/: lib.rs
examples/example-clack/: Cargo.toml  Info.auv2.plist  Info.vst3.plist  README.md
examples/example-clack/src/: lib.rs
examples/example-clap/: Cargo.toml  Info.auv2.plist  Info.vst3.plist
examples/example-clap/src/: lib.rs
examples/example-nih-plug/: Cargo.toml  Info.auv2.plist  Info.vst3.plist  README.md
examples/example-nih-plug/src/: editor.rs  lib.rs
src/: auv2.rs  lib.rs  vst3.rs
src/auv2-cpp/: generated_cocoaclasses.hxx  generated_entrypoints.hxx
src/cpp/: generated_cocoaclasses.hxx  generated_entrypoints.hxx
