[workspace]
resolver = "3"
members = [ 
    ".", 
    "examples/example-clack",
    "examples/example-nih-plug"
]

[package]
name = "clap-wrapper"
version = "0.1.0"
edition = "2024"
authors = ["Quant1um"]
readme = "README.md"
repository = "https://github.com/blepfx/clap-wrapper-rs"
license = "MIT OR Apache-2.0"
description = "An easy way to use clap-wrapper in your audio plugins!"
keywords = ["vst3", "auv2", "clap", "audio", "plugin"]

[build-dependencies]
cc = { version = "1.2.19", features = ["parallel"] }
stdio-override = "0.2.0"