[package]
name = "clap-wrapper-vst3"
version = "0.2.0"
edition = "2024"
authors = ["Quant1um <blep@amee.ee>"]
readme = "README.md"
repository = "https://github.com/blepfx/clap-wrapper-rs"
license = "MIT OR Apache-2.0"
description = "An easy way to use clap-wrapper in your audio plugins!"
keywords = ["vst3", "clap", "audio", "plugin"]
include = [
    "src/**", 
    "build.rs", 
    "Cargo.toml",
    "Cargo.lock",
    "./README.md",
    
    "external/clap/include/**",
    "external/clap-wrapper/include/**",
    "external/clap-wrapper/libs/**",
    "external/clap-wrapper/src/**",
    "external/filesystem/include/**",

    "external/vst3sdk/pluginterfaces/**",
    "external/vst3sdk/public.sdk/source/**",
    "external/vst3sdk/base/**",
]

[build-dependencies]
cc = { workspace = true }

[features]
default = ["parallel"]
parallel = ["cc/parallel"]