[package]
name = "example-clack"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack" }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = ["audio-ports", "clack-plugin", "note-ports", "params", "state"] }
clap-wrapper = { path = "../.." }