[package]
name = "example-nih-plug"
version = "0.1.0"
edition = "2024"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "A simple gain plugin with an vizia GUI"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clap-wrapper = { path = "../.." }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "400eb3156f221073fbcaf95607b56842272d134b" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "400eb3156f221073fbcaf95607b56842272d134b" }
atomic_float = "1.1"